bring back direct type instances